# src/models/associations.js
@@ -13,6 +13,6 @@ EntityType.belongsToMany(Domain, { through: "DomainEntityType" });
 
 // Many-to-Many: Functional Roles <-> Domains
 FunctionalRole.belongsToMany(Domain, { through: "FunctionalRoleDomain" });
-Domain.belongsToMany(FunctionalRole, { through: "FunctionalRoleDomain" });
+Domain.belongsToMany(FunctionalRole, { through: "FunctionalRoleDomain" }); 
 
 module.exports = { FunctionalRole, TaskRole, Domain, EntityType };
